@@ -13,7 +13,7 @@ RELEASE = $(LT_VERSION) -release $(LT_RELEASE)
 AM_CXXFLAGS = $(UCOMMON_FLAGS)
 
 pkgincludedir = $(includedir)/commoncpp
-pkginclude_HEADERS = config.h export.h string.h exception.h thread.h \
+pkginclude_HEADERS = config.h export.h string.h exception.h thread.h misc.h \
 	slog.h applog.h address.h socket.h tcp.h udp.h dccp.h mime.h file.h \
 	process.h pointer.h serial.h tokenizer.h numbers.h object.h \
 	commoncpp.h
